[tool.poetry]
name = "frc"
version = "0.1.1"
description = "Library for computing Fourier Ring Correlation (FRC) curves and using them to determine image resolution."
authors = ["Tip ten Brink <T.M.tenBrink@student.tudelft.nl>"]
readme = "README.md"
packages = [
    { include = "frc", from = "src" },
]

[tool.poetry.urls]
"Source Code" = "https://github.com/tmtenbrink/frc"

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
diplib = "^3.1.0"
scipy = [
    {version = "^1.3.2", python = "<3.12"},
    {version = "^1.11.2", python = ">=3.12"}
]
numpy = [
    {version = "^1.18", python = "<3.12"},
    {version = "^1.26", python = ">=3.12"}
]
rustfrc = [
    {version = "^1.1.5", python = "<3.12"},
    {version = "^1.1.5", python = ">=3.12"}
]

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
